fix large text on mobile

--- a/style.css
+++ b/style.css
@@ -51,4 +51,7 @@ body {
     gap: 5px;
   }
 
+  .field {
+    font-size: 3rem;
+  }
 }
